refactor: 편의시설 관련 리포지토리 및 서비스 리팩토링